k8s/02-back-despachos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-despachos
  labels:
    app: back-despachos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back-despachos
  template:
    metadata:
      labels:
        app: back-despachos
      annotations:
        instrumentation.opentelemetry.io/inject-java: "false"
        instrumentation.opentelemetry.io/inject-nodejs: "false"
        instrumentation.opentelemetry.io/inject-python: "false"
        instrumentation.opentelemetry.io/inject-dotnet: "false"
    spec:
      containers:
        - name: back-despachos
          image: 633079526033.dkr.ecr.us-east-1.amazonaws.com/despacho-api:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /swagger-ui.html
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /swagger-ui.html
              port: 8081
            initialDelaySeconds: 90
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: back-despachos-svc
spec:
  selector:
    app: back-despachos
  ports:
    - port: 8081
      targetPort: 8081
  type: LoadBalancer
