k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itpcargo-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  rules:
    - http:
        paths:
          # Backend de ventas: todo lo que llegue a /api/v1/ventas
          - path: /api/v1/ventas
            pathType: Prefix
            backend:
              service:
                name: back-ventas-svc
                port:
                  number: 8080

          # Backend de despachos: todo lo que llegue a /api/v1/despachos
          - path: /api/v1/despachos
            pathType: Prefix
            backend:
              service:
                name: back-despachos-svc
                port:
                  number: 8081

          # Todo lo demas va al frontend (debe ir al final, es el catch-all)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
